--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,3 +1,45 @@
+macro_->: macro_->{
+compatible = "zmk,behavior-macro";
+label = "macro_->";
+#binding-cells = <0>;
+bindings = <&kp SPACE>, <&kp MINUS>, <&kp GREATER_THAN>, <&kp SPACE>;
+};
+macro_larger_than: macro_larger_than{
+compatible = "zmk,behavior-macro";
+label = "macro_larger_than";
+#binding-cells = <0>;
+bindings = <&kp SPACE>, <&kp GREATER_THAN>, <&kp EQUAL>, <&kp SPACE>;
+};
+macro_smaller_than: macro_smaller_than{
+compatible = "zmk,behavior-macro";
+label = "macro_smaller_than";
+#binding-cells = <0>;
+bindings = <&kp SPACE>, <&kp LESS_THAN>, <&kp EQUAL>, <&kp SPACE>;
+};
+macro_not_equal: macro_not_equal{
+compatible = "zmk,behavior-macro";
+label = "macro_not_equal";
+#binding-cells = <0>;
+bindings = <&kp SPACE>, <&kp CARET>, <&kp EQUAL>, <&kp SPACE>;
+};
+macro_comment: macro_comment{
+compatible = "zmk,behavior-macro";
+label = "macro_comment";
+#binding-cells = <0>;
+bindings = <&kp SLASH>, <&kp STAR>, <&kp ENTER>, <&kp ENTER>, <&kp STAR>, <&kp SLASH>, <&kp UP_ARROW>;
+};
+macro_code_close: macro_code_close{
+compatible = "zmk,behavior-macro";
+label = "macro_code_close";
+#binding-cells = <0>;
+bindings = <&kp KP_NUMLOCK>, <&kp LA(KP_MINUS)>, <&kp KP_NUMLOCK>;
+};
+macro_code_open: macro_code_open{
+compatible = "zmk,behavior-macro";
+label = "macro_code_open";
+#binding-cells = <0>;
+bindings = <&kp KP_NUMLOCK>, <&kp LA(KP_PLUS)>, <&kp KP_NUM>;
+};
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
 label = "macro_quotes";
