--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,6 +1,6 @@
-macro_->: macro_->{
+macro_arrow: macro_arrow{
 compatible = "zmk,behavior-macro";
-label = "macro_->";
+label = "macro_arrow";
 #binding-cells = <0>;
 bindings = <&kp SPACE>, <&kp MINUS>, <&kp GREATER_THAN>, <&kp SPACE>;
 };
